# dxpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __build__.py  __init__.py  __main__.py  setup.py
pybind/: directx_pybind.cc
runtime/: directx_header.h  directx_kernel.h
src/pybind/: directx_pybind.cc
src/runtime/: directx_common.h  directx_kernel.cc  directx_kernel.h  directx_shader_compiler.cc
